--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
+
 *{
     margin: 0;
     padding: 0;
 } 
 
+body{
+    background-color: #add8e6;
+}
+
 /* header */
 .container{
     margin: 0 auto;
     max-width: 70%;
-    background-color: #add8e6;
 }
 
 header{
     display: flex;
-    background-color: #add8e6;
     justify-content: space-between;
     padding: 16px;
     }
@@ -52,3 +55,24 @@ nav{
     
 }
 
+.blocco2{
+    display: flex;
+    justify-content: center;
+    height: 600px;
+    background-color: #ffffff;
+    margin-top: 2px;
+    padding: 50px 0;
+    
+}
+
+.blu{
+    background-color: #1e90ff;
+    width: 725px;
+    border: 2px dotted #000;
+}
+
+.rosa{
+    background-color: #ffc0cb;
+    width: 480px;
+    border: 2px dotted #000;
+}
