--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ nav{
 
 /* main */
 
+/* sezione 1 */
+
 #sec-1{
     display: flex;
     justify-content: center;
@@ -54,6 +56,8 @@ nav{
     border: 2px dotted #000;
     
 }
+
+/* sezione 2 */
 
 .blocco2{
     display: flex;
@@ -76,3 +80,35 @@ nav{
     width: 480px;
     border: 2px dotted #000;
 }
+
+/* sezione 3 */
+
+.blocco3{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    height: 600px;
+    background-color: #d3d3d3;
+    padding: 50px 0;
+}
+
+
+/* sezione 4 */
+
+.blocco4{
+    background-color: #d3d3d3;
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+.blocco4>div{
+    background-color: #228b22;
+    width: 1204px;
+    height: 900px;
+}
+
+/* sezione 5 */
+
+
+
