--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 } 
 
 body{
@@ -117,6 +118,7 @@ nav{
     height: 600px;
     background-color: #23272a;
     padding: 50px 0;
+    border-bottom: 3px solid #ffffff;
 }
 
 .rosa2{
@@ -137,4 +139,25 @@ nav{
     width: 210px;
 }
 
+/* footer */
 
+footer{
+    background-color: #23272a;
+    padding-top: 30px;
+}
+
+.piede-pagina{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1204px;
+    height: 81px;
+    background-color: #7fffd4;
+}
+
+.piede-pagina>div{
+    background-color: #ffb6c1;
+    padding: 10px 12px;
+    margin-top: 10px;
+    border: 2px dotted #000;
+}
