--- a/style.css
+++ b/style.css
@@ -23,13 +23,16 @@ header{
 
 header >div{
     padding: 15px 12px;
-    border: 2px dotted #000;
     background-color: #daa520;
 }
 
 header .box-1{
     width: 240px;
     }
+
+header .box-2{
+    align-self: flex-end;
+}
 
 header #menù-centrale{
     flex-grow: 1;
@@ -51,11 +54,8 @@ nav{
 }
 
 #sec-1>div{
-    height: 401px;
     width: 904px;
-    background-color: #ee82ee;
-    border: 2px dotted #000;
-    
+    background-color: #ee82ee;    
 }
 
 /* sezione 2 */
@@ -63,7 +63,6 @@ nav{
 .blocco2{
     display: flex;
     justify-content: center;
-    height: 600px;
     background-color: #ffffff;
     margin-top: 2px;
     padding: 50px 0;
@@ -73,13 +72,11 @@ nav{
 .blu{
     background-color: #1e90ff;
     width: 725px;
-    border: 2px dotted #000;
 }
 
 .rosa{
     background-color: #ffc0cb;
     width: 480px;
-    border: 2px dotted #000;
 }
 
 /* sezione 3 */
@@ -88,7 +85,6 @@ nav{
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
-    height: 600px;
     background-color: #d3d3d3;
     padding: 50px 0;
 }
@@ -106,8 +102,6 @@ nav{
 .blocco4>div{
     background-color: #228b22;
     width: 1204px;
-    height: 900px;
-    border: 2px dotted #000;
 }
 
 /* sezione 5 */
@@ -115,7 +109,6 @@ nav{
 #blocco5{
     display: flex;
     justify-content: center;
-    height: 600px;
     background-color: #23272a;
     padding: 50px 0;
     border-bottom: 3px solid #ffffff;
@@ -124,18 +117,15 @@ nav{
 .rosa2{
     background-color: #f08080;
     width: 362px;
-    border: 2px dotted #000;
 }
 
 .azzurro2{
     background-color: #20b2aa;
     width: 841px;
-    border: 2px dotted #000;
     display: flex;
 }
 
 .blocchi{
-    border: 2px dotted #ffffff;
     width: 210px;
 }
 
@@ -159,5 +149,27 @@ footer{
     background-color: #ffb6c1;
     padding: 10px 12px;
     margin-top: 10px;
+}
+
+
+/* debug */
+
+.debug-bordino{
     border: 2px dotted #000;
+}
+
+.debug-bordino-bianco{
+    border: 2px dotted #ffffff; 
+}
+
+.debug-altezza-sec-1{
+    height: 401px;
+}
+
+.debug-altezza-sec-2{
+    height: 600px;
+}
+
+.debug-altezza-sec-4{
+    height: 900px;
 }
