--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,12 @@ body{
 /* header */
 .container{
     margin: 0 auto;
-    max-width: 70%;
+    max-width: 1204px;
 }
 
 header{
     display: flex;
-    width: 1204px;
-    padding: 16px;
+    padding: 16px 0px;
     }
 
 header >div{
@@ -28,6 +27,7 @@ header >div{
 
 header .box-1{
     width: 240px;
+    flex-shrink: 0;
     }
 
 header .box-2{
